# umami-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/umami_mcp/: __init__.py  __main__.py  client.py  config.py  dates.py  rag.py  server.py  web.py
tests/: test_client.py  test_config.py  test_dates.py  test_rag.py  test_server.py  test_web.py
