[project]
name = "umami-mcp-server"
version = "0.2.2"
description = "A Model Context Protocol (MCP) server that gives Claude (and other MCP clients) access to your Umami web analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "umami", "analytics", "claude", "llm"]
authors = [{ name = "umami-mcp-server contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

# Core is deliberately lightweight: just the MCP runtime + an async HTTP client.
# The heavy, situational features live behind extras so a default install stays small.
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Semantic search over user journeys (get_docs). Pulls torch-sized wheels.
rag = [
    "sentence-transformers>=2.5.1",
    "numpy>=1.26.0",
]
# Rendered-page screenshots (get_screenshot). Needs a headless browser.
screenshot = [
    "playwright>=1.40.0",
    "Pillow>=9.4.0",
]
# Everything optional, for users who want the full toolset.
all = [
    "umami-mcp-server[rag,screenshot]",
]
# Test/lint toolchain. numpy is included so the rag pure-logic tests run without torch.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "numpy>=1.26.0",
]

[project.scripts]
umami-mcp-server = "umami_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/MurkyPuma/umami-mcp-server"
Issues = "https://github.com/MurkyPuma/umami-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/umami_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
